# logic-magnets

./: Algorithm.cpp  Algorithm.h  AlgorithmActions.cpp  AttractActions.cpp  Board.cpp  Board.h  BoardActions.cpp  CMakeLists.txt  LevelInitializer.h  LevelsContainer.txt  Message.h  RepelActions.cpp  Stone.cpp  Stone.h  StoneTypeEnum.h  main.cpp  source.cpp  test.cpp
Algorithm/: Algorithm.cpp  Algorithm.h  AlgorithmActions.cpp  Node.cpp  Node.h
Board/: AttractActions.cpp  Board.cpp  Board.h  RepelActions.cpp
LevelInitializer/: LevelInitializer.cpp  LevelInitializer.h  LevelSetup.cpp
Message/: Message.h
Stone/: Stone.h  StoneTypeEnum.h
